<resources>

    <!-- App title and fragment titles -->
    <string name="app_name">Counter app</string>
    <string name="counter_overview_fragment">CounterOverviewFragment</string>
    <string name="counter_create_fragment">CounterCreateFragment</string>

    <!-- Button labels -->
    <string name="create_nav">Create a new counter</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <!-- TextView labels -->
    <string name="label">Label:</string>
    <string name="label_hint">Enter a  catchy name</string>
    <string name="color">Color:</string>
    <string name="value">Initial value:</string>
    <string name="goal">Goal value:</string>
    <string name="increase">Increase value:</string>
    <string name="progress">Counter progress:</string>
    <string name="decrease">Decrease value:</string>
    <string name="created">Created at:</string>
    <string name="tapped">Last tapped at:</string>
    <string name="total_taps">Total taps:</string>
    <string name="goal_reached">Times the goal have been reached:</string>
    <string name="your_counters">Active Counters:</string>
    <string name="pick">Pick</string>
    <string name="increase_value">Increase value:</string>
    <string name="decrease_value">Decrease value:</string>
    <string name="value_info">Value</string>
    <string name="first_message">To create your first counter,\nclick on the button below</string>
    <string name="reset_all">Reset all</string>
    <string name="delete_all">Delete all</string>
    <string name="fact">Fun fact:</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="hide_advanced_settings">Hide advanced settings</string>


</resources>