<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="counterCreateViewModel"
            type="com.example.mobile_development.countercreate.CounterCreateViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:background="@drawable/round"
        android:backgroundTint="@color/navy"
        android:textColor="@color/white"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="80dp"
        android:onClick="@{()-> counterCreateViewModel.onCreate()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/round"
        android:backgroundTint="@color/navy"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:layout_marginStart="80dp"
        android:onClick="@{()-> counterCreateViewModel.onCancel()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_text"
            android:layout_width="58dp"
            android:layout_height="22dp"
            android:text="@string/label"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/name_editText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/color_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_editText" />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/label_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_text" />

        <Button
            android:id="@+id/color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/pick"
            android:onClick="@{() -> counterCreateViewModel.onColor()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_text" />

        <Button
            android:id="@+id/advanced_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/navy"
            android:textColor="@color/white"
            android:text="@string/advanced_settings"
            android:padding="5dp"
            android:onClick="@{() -> counterCreateViewModel.onAdvanced()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_button" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/advanced_settings"
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/color_button"
            android:visibility="gone"
            >

        <TextView
            android:id="@+id/value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/value_editText"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="default: 0"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_text" />

        <TextView
            android:id="@+id/goal_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            app:layout_constraintStart_toStartOf="@id/goal_value_editText"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/goal_value_editText"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="default: 100"
            android:layout_width="145dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_text" />

        <TextView
            android:id="@+id/decrease_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrease"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_editText" />

        <TextView
            android:id="@+id/increase_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase"
            app:layout_constraintStart_toStartOf="@id/increase_editText"
            app:layout_constraintTop_toBottomOf="@+id/value_editText" />


        <EditText
            android:id="@+id/decrease_editText"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="default: 1"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decrease_text" />

        <EditText
            android:id="@+id/increase_editText"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="default: 1"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/increase_text" />

            <Button
                android:id="@+id/hide_advanced_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round"
                android:backgroundTint="@color/navy"
                android:textColor="@color/white"
                android:text="@string/hide_advanced_settings"
                android:padding="5dp"
                android:onClick="@{() -> counterCreateViewModel.onAdvancedComplete()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/decrease_editText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>